Fixed a bug in TTF subsetting where a composite glyph could get remapped more than once resulting in garbled character.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1151195 13f79535-47bb-0310-9956-ffa450edef68